# zakasnyava-li

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SPEC.md  index.html  pyproject.toml
.beads/: config.yaml  interactions.jsonl  metadata.json
.github/workflows/: ci.yml  site-build.yml
_astro/: _id_.astro_astro_type_script_index_0_lang.BEjTBZVA.js  _id_.astro_astro_type_script_index_0_lang.DkeXPGfK.js  feed-health.BWXZgYbW.css  feed-health.DtAgPMhE.css
collector/: collector.py  fetch_static_gtfs.py
data/: months.json
data/2026-06/: feed_health.json  index.json
data/2026-07/: feed_health.json  index.json
docs/internal/: RECON.md
feed-health/: index.html
line/A1/: index.html
line/A100/: index.html
line/A101/: index.html
line/A103/: index.html
line/A104/: index.html
line/A105/: index.html
line/A106/: index.html
line/A108/: index.html
line/A109/: index.html
line/A110/: index.html
line/A12/: index.html
line/A13/: index.html
line/A167/: index.html
line/A190/: index.html
line/A193/: index.html
line/A195/: index.html
line/A2/: index.html
line/A200/: index.html
line/A201/: index.html
line/A217/: index.html
line/A22/: index.html
line/A220/: index.html
methodology/: index.html
ops/: nightly.sh
pipeline/: build_stop_events.py  build_vehicle_arrivals.py  compute_metrics.py  schemas.sql  tier2_vp_recon.py
site/: astro.config.mjs  package-lock.json  package.json
tests/: regen_golden.py  test_build_stop_events.py  test_build_vehicle_arrivals.py  test_collector.py  test_compute_metrics.py  test_placeholder.py
(+397 files in other folders)
